<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_poster_tvshow"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="18dp"
        android:src="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_title_tvshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_poster_tvshow"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/text_date_tvshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/text_title_tvshow"
        app:layout_constraintStart_toStartOf="@+id/text_title_tvshow"
        app:layout_constraintTop_toBottomOf="@+id/text_title_tvshow"
        tools:text="@string/date" />

    <TextView
        android:id="@+id/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_date_tvshow" />

    <TextView
        android:id="@+id/text_desc_tvshow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tools" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/text_desc_tvshow"
        app:layout_constraintEnd_toEndOf="@+id/text_desc_tvshow"
        app:layout_constraintStart_toStartOf="@+id/text_desc_tvshow"
        app:layout_constraintTop_toTopOf="@+id/text_desc_tvshow"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>