<resources>
    <string name="app_name">Submission</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title</string>
    <string name="date">date</string>
    <string name="movie">MOVIE</string>
    <string name="tvshow">TV SHOW</string>
    <string name="description">description</string>
</resources>